# lambda-irc

./: LICENSE  README.md  lambda-irc.cabal
src/: Main.hs
